--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content=pranit,zambre,pranitzambre,thelovemachine,capatilism,onecap,onecapitalism>
-    <meta name="description" content="OneCap, short for OneCapitalism, is an economic ideology with respect to the Kardashev scale proposed by Pranit Zambre, also known as The Lovemachine in January 2024.">
+    <meta name="keywords" content=pranit,zambre,pranitzambre,thelovemachine,capatilism,onecapism,onecapitalism>
+    <meta name="description" content="OneCapism, short for OneCapitalism, is an economic ideology with respect to the Kardashev scale proposed by Pranit Zambre, also known as The Lovemachine in January 2024.">
     <meta id="viewport-tag"  name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta property="og:site_name" content="OneCapitalism.com">
-    <meta property="og:title" content="OneCap">
+    <meta property="og:title" content="OneCapism">
     <meta property="og:url" content="https://www.OneCapitalism.com">
     <meta property="og:type" content="website">
-    <meta itemprop="name" content="OneCap">
+    <meta itemprop="name" content="OneCapism">
     <meta itemprop="url" content="https://www.OneCapitalism.com">
-    <meta name="twitter:title" content="OneCap">
+    <meta name="twitter:title" content="OneCapism">
     <meta name="twitter:url" content="https://www.OneCapitalism.com">
     <meta name="twitter:card" content="summary">
     <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="x-icon" href="svgs/gold.svg">
-    <title>OneCap</title>
+    <title>OneCapism</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;700&display=swap');
 
@@ -59,7 +59,7 @@
 <body>
     <div class="onecap">
         <img src="svgs/gold.svg" alt="gold" height="250" width="250">
-        <h1>OneCap</h1>
-        <h4 style="color: #6b7280;">OneCap, short for OneCapitalism, is an economic ideology with respect to the Kardashev scale proposed by Pranit Zambre, also known as The Lovemachine in January 2024.</h4>
+        <h1>OneCapism</h1>
+        <h4 style="color: #6b7280;">OneCapism, short for OneCapitalism, is an economic ideology with respect to the Kardashev scale proposed by Pranit Zambre, also known as The Lovemachine in January 2024.</h4>
 </body>
 </html>
